--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,12 @@
 {
 	"version": 2,
 	"builds": [
-		{"src": "binusWifiAPI_prod.py", "use": "@vercel/python"}
+		{ "src": "binusWifiAPI_prod.py", "use": "@vercel/python@3.9" }
 	],
 	"routes": [
-		{"src": "/(.*)", "dest": "binusWifiAPI_prod.py"}
-	]
+		{ "src": "/(.*)", "dest": "binusWifiAPI_prod.py" }
+	],
+	"env": {
+		"DATABASE_URL": "postgres://default:q2kuJlzySt1O@ep-wandering-field-a1z55naq-pooler.ap-southeast-1.aws.neon.tech:5432/verceldb?sslmode=require"
+	}
 }
