--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,13 @@
 {
 	"version": 2,
 	"builds": [
-		{ "src": "binusWifiAPI_prod.py", "use": "@vercel/python@3.9" }
+		{"src": "binusWifiAPI_prod.py", "use": "@vercel/python@3.9"}
 	],
 	"routes": [
-		{ "src": "/(.*)", "dest": "binusWifiAPI_prod.py" }
-	]
+		{"src": "/(.*)", "dest": "binusWifiAPI_prod.py"}
+	],
+	"config": {
+		"maxLambdaSize": "15mb",
+		"runtime": "python3.9"
+	}
 }
