--- a/vercel.json
+++ b/vercel.json
@@ -5,7 +5,7 @@
 		{"src": "index.html", "use": "@vercel/static"}
 	],
 	"routes": [
-		{"src": "/(.*)", "dest": "binusWifiAPI_prod.py"},
+		{"src": "/api/(.*)", "dest": "binusWifiAPI_prod.py"},
 		{"src": "/", "dest": "/index.html"}
 	]
 }
