--- a/vercel.json
+++ b/vercel.json
@@ -6,6 +6,6 @@
   ],
   "routes": [
     {"src": "/api/(.*)", "dest": "binusWifiAPI_prod.py"},
-    {"src": "/", "dest": "/index.php"}
+    {"src": "/(.*)", "dest": "/index.php"}
   ]
 }
