--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,24 @@
 {
   "version": 2,
   "builds": [
-    {"src": "binusWifiAPI_prod.py", "use": "@vercel/python"},
+    {
+      "src": "binusWifiAPI_prod.py",
+      "use": "@vercel/python"
+    }
   ],
   "routes": [
-    {"src": "/api/(.*)", "dest": "binusWifiAPI_prod.py"},
-    {"src": "/(.*)", "dest": "/index.php"}
+    {
+      "src": "/api/(.*)",
+      "dest": "binusWifiAPI_prod.py"
+    },
+    {
+      "src": "/",
+      "dest": "/index.php"
+    }
   ],
   "functions": {
     "*.php": {
       "runtime": "vercel-php@0.5.3"
     }
-  },
+  }
 }
