--- a/vercel.json
+++ b/vercel.json
@@ -12,7 +12,7 @@
       "dest": "binusWifiAPI_prod.py"
     },
     {
-      "src": "/",
+      "src": "/(.*)",
       "dest": "/index.php"
     }
   ],
