--- a/vercel.json
+++ b/vercel.json
@@ -12,4 +12,9 @@
       "dest": "binusWifiAPI_prod.py"
     }
   ]
+  "functions": {
+    "index.php": {
+      "runtime": "vercel-php@0.5.2"
+    }
+  }
 }
