--- a/vercel.json
+++ b/vercel.json
@@ -12,9 +12,11 @@
             "dest": "binusWifiAPI_prod.py"
         }
     ],
-    "functions": {
-        "index.php": {
-            "runtime": "vercel-php@0.5.2"
+    {
+      "functions": {
+        "api/index.php": {
+          "runtime": "vercel-php@0.5.2"
         }
+      }
     }
 }
