--- a/vercel.json
+++ b/vercel.json
@@ -4,10 +4,6 @@
         {
             "src": "binusWifiAPI_prod.py",
             "use": "@vercel/python"
-        },
-        {
-            "src": "index.php",
-            "use": "vercel-php@0.7.1"
         }
     ],
     "routes": [
@@ -19,5 +15,10 @@
             "src": "/",
             "dest": "index.php"
         }
-    ]
+    ],
+    "functions": {
+        "(.*)\.php": {
+            "runtime": "vercel-php@0.7.1"
+        }
+    }
 }
