--- a/vercel.json
+++ b/vercel.json
@@ -17,7 +17,7 @@
         }
     ],
     "functions": {
-        "(.*).php": {
+        "index.php": {
             "runtime": "vercel-php@0.7.1"
         }
     }
