--- a/vercel.json
+++ b/vercel.json
@@ -4,6 +4,10 @@
         {
             "src": "binusWifiAPI_prod.py",
             "use": "@vercel/python"
+        },
+        {
+            "src": "index.php",
+            "use": "vercel-php@0.7.1"
         }
     ],
     "routes": [
