--- a/vercel.json
+++ b/vercel.json
@@ -1,12 +1,17 @@
 {
     "version": 2,
     "functions": {
+        "binusWifiAPI_prod.py": { "runtime": "@vercel/python" },
         "index.php": { "runtime": "vercel-php@0.6.0" }
     },
     "builds": [
         {
             "src": "binusWifiAPI_prod.py",
             "use": "@vercel/python"
+        },
+        {
+            "src": "index.php",
+            "use": "vercel-php@0.6.0"
         }
     ],
     "routes": [
