--- a/vercel.json
+++ b/vercel.json
@@ -18,6 +18,10 @@
         {
             "src": "/",
             "dest": "index.php"
+        },
+        {
+            "src": "/assets/(.*)",
+            "dest": "assets/"
         }
     ]
 }
