--- a/vercel.json
+++ b/vercel.json
@@ -4,16 +4,12 @@
     {
       "src": "binusWifiAPI_prod.py",
       "use": "@vercel/python"
-    },
-    {
-      "src": "index.php",
-      "use": "vercel/php@0.7.1"
     }
   ],
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "binusWifiAPI_prod.py"
+      "dest": "/api/binusWifiAPI_prod.py"
     },
     {
       "src": "/",
