--- a/vercel.json
+++ b/vercel.json
@@ -2,14 +2,31 @@
   "version": 2,
   "builds": [
     {
-      "src": "binusWifiAPI_prod.py",
+      "src": "api/binusWifiAPI_prod.py",
       "use": "@vercel/python"
+    },
+    {
+      "src": "index.php",
+      "use": "vercel/php@0.7.1"
     }
   ],
+  "functions": {
+    "index.php": {
+      "includeFiles": "assets/**/*"
+    }
+  },
   "routes": [
     {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
+    },
+    {
       "src": "/api/(.*)",
-      "dest": "binusWifiAPI_prod.py"
+      "dest": "api/binusWifiAPI_prod.py"
+    },
+    {
+      "src": "/",
+      "dest": "/index.php"
     }
   ]
 }
