--- a/vercel.json
+++ b/vercel.json
@@ -9,11 +9,7 @@
   "routes": [
     {
       "src": "/api/(.*)",
-      "dest": "api/binusWifiAPI_prod.py"
-    },
-    {
-      "src": "/",
-      "dest": "/index.php"
+      "dest": "binusWifiAPI_prod.py"
     }
   ]
 }
