--- a/vercel.json
+++ b/vercel.json
@@ -14,6 +14,10 @@
     {
       "src": "/(.*)",
       "dest": "/index.php"
+    },
+    {
+      "src": "/assets/(.*)",
+      "dest": "/assets/$1"
     }
   ]
 }
