--- a/vercel.json
+++ b/vercel.json
@@ -13,11 +13,11 @@
   "routes": [
     {
       "src": "/assets/(.*)",
-      "dest": "/assets/$1"
+      "dest": "assets/$1"
     },
     {
       "src": "/(.*)",
-      "dest": "/index.php"
+      "dest": "index.php"
     }
   ]
 }
