--- a/vercel.json
+++ b/vercel.json
@@ -6,10 +6,10 @@
       "use": "vercel/php@0.7.1"
     }
   ],
+  "functions": {
+    "api/index.php": {"runtime": "vercel-php@0.7.1"}
+  },
   "routes": [
-    {
-      "src": "/(.*)",
-      "dest": "index.php"
-    }
+    {"src": "/(.*)", "dest": "index.php"}
   ]
 }
