--- a/vercel.json
+++ b/vercel.json
@@ -7,7 +7,7 @@
     }
   ],
   "functions": {
-    "api/index.php": {"runtime": "vercel-php@0.7.1"}
+    "index.php": {"runtime": "vercel-php@0.7.1"}
   },
   "routes": [
     {"src": "/(.*)", "dest": "index.php"}
