--- a/vercel.json
+++ b/vercel.json
@@ -1,9 +1,14 @@
 {
   "version": 2,
   "functions": {
-    "index.php": {"runtime": "vercel-php@0.7.1"}
+    "index.php": {
+      "runtime": "vercel-php@0.7.x"
+    }
   },
   "routes": [
-    {"src": "/(.*)", "dest": "index.php"}
+    {
+      "src": "/(.*)",
+      "dest": "index.php"
+    }
   ]
 }
