--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,9 @@
 {
   "version": 2,
+  "builds": [
+    { "src": "/index.php", "use": "vercel-php@0.3.1" },
+    { "src": "/public/**", "use": "@vercel/static" }
+  ],
   "framework": null,
   "functions": {
     "index.php": {
@@ -8,8 +12,8 @@
   },
   "routes": [
     {
-      "src": "/(.*)",
-      "dest": "index.php"
+      "src": "/.*",
+      "dest": "/index.php"
     }
   ]
 }
