--- a/vercel.json
+++ b/vercel.json
@@ -2,7 +2,7 @@
   "version": 2,
   "builds": [
     { "src": "/index.php", "use": "vercel-php@0.3.1" },
-    { "src": "/public/**", "use": "@vercel/static" }
+    { "src": "/assets/**", "use": "@vercel/static" }
   ],
   "framework": null,
   "functions": {
