--- a/vercel.json
+++ b/vercel.json
@@ -1,14 +1,7 @@
 {
-  "version": 2,
-  "builds": [
-    { "src": "/index.php", "use": "vercel-php@0.3.1" },
-    { "src": "/assets/**", "use": "@vercel/static" }
-  ],
-  "framework": null,
-  "routes": [
-    {
-      "src": "/.*",
-      "dest": "/index.php"
+  "functions": {
+    "api/*.php": {
+      "runtime": "vercel-php@0.7.1"
     }
-  ]
+  }
 }
